[package]
name = "barest"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[build]
target = "x86_64-unknown-none"

[unstable]
build-std = ["core", "compiler_builtins"]

[target.'cfg(target_os = "none")']
runner = "bootimage runner"
