[package]
name = "kernel_with_bootloader"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9"
bootloader_api = "0.11.9"
x86_64 = "0.14.13"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
spin = "0.9"
volatile = "0.4"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[build]
target = "x86_64-unknown-none"

[unstable]
build-std = ["core", "compiler_builtins"]

[[bin]]
name = "kernel_with_bootloader"
path = "src/main.rs"














