[package]
name = "kernel_with_bootloader"
version = "0.1.0"
edition = "2024"

[dependencies]
 bootloader_api = "0.11"
 x86_64 = "0.14"
 noto-sans-mono-bitmap = "0.2" 
 lazy_static = { version = "1.4", features = ["spin_no_std"] }
 spin = "0.9"
 volatile = "0.4"

[[bin]] 
name = "kernel_with_bootloader"
path = "src/main.rs"